package com.novaperutech.veyra.platform.analytics.domain.model.valueobjects;

public enum MetricCategory {
    RESIDENT, STAFF,MEDICAL
}

