package com.novaperutech.veyra.platform.analytics.domain.model.valueobjects;

public enum MetricType {
    RESIDENT_ADMISSION,
    RESIDENT_DECEASED,
    RESIDENT_RETIRED,
    RESIDENT_ACTIVE,
    EMPLOYEE_HIRED,
    EMPLOYEE_TERMINATED,
    EMPLOYEE_SUSPENDED,
    }
